--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
     <head>
         <!-- Externo -->
-
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
         <!-- CSS -->
 
-        <!-- JavaScript -->
+        <!-- meta -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Cazador</title>
     </head>
     <body>
 
+        <!-- JavaScript -->
+
+        <!-- Externo -->
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="js/materialize.min.js"></script>
     </body>
 </html>
